--- a/.github/workflows/test_action.yaml
+++ b/.github/workflows/test_action.yaml
@@ -12,9 +12,7 @@ jobs:
       - name: Fetch num squared
         id: get_square
         uses: ./ # Uses an action in the root directory
-        # or use a released Github Action
-        # uses: shipyard/github-action/fetch-shipyard-env@1.0.0
         with:
-          num: 11
+          dir: '.'
       - name: Print the square
         run: echo "${{ steps.get_square.outputs.num_squared }}"
