--- a/action.yml
+++ b/action.yml
@@ -22,5 +22,7 @@ runs:
       shell: bash
     - name: Fetch the number's square
       id: get-lean-version
-      run: uv run src/get_lean_version.py --dir=${{ inputs.dir }}
+      run: |
+        ls
+        uv run src/get_lean_version.py --dir=${{ inputs.dir }}
       shell: bash
