--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ inputs:
   dir:
     description: 'Project Directory'
     required: true
-    default: "1"
+    default: "."
 outputs:
   num_squared:
     description: 'Square of the input'
