--- a/action.yml
+++ b/action.yml
@@ -30,6 +30,15 @@ runs:
       run: |
         uv run .lean-autoupdate/src/get_lean_version.py --dir=${{ inputs.dir }}
       shell: bash
+
+    - name: Install elan 🕑
+      run: |
+        set -o pipefail
+        curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- --default-toolchain none -y
+        ~/.elan/bin/lean --version
+        echo "$HOME/.elan/bin" >> $GITHUB_PATH
+      shell: bash
+
     - name: Update Lean & Mathlib
       run: |
         sed -e "s/\"nightly-testing.*\"/\"${{steps.get-lean-version.outputs.date}}\"/" -i lakefile.toml
