--- a/action.yml
+++ b/action.yml
@@ -25,13 +25,19 @@ runs:
       with:
         repository: opencompl/lean-autoupdate
         path: '.lean-autoupdate'
+
+    - name: Fetch the number's square
+      run: |
+        uv run .lean-autoupdate/src/get_lean_version.py --dir=${{ inputs.dir }}
+      shell: bash
+
     - name: Fetch the number's square
       id: get-lean-version
       run: |
         uv run .lean-autoupdate/src/get_lean_version.py --dir=${{ inputs.dir }}
       shell: bash
 
-    - name: Lean version
+    - name: Lean version II
       run: |
         echo ${{steps.get-lean-version.outputs.stdout}}
       shell: bash
